# nexthaven.ai

./: .cursorrules  .gitignore  README.md  a.txt  compose.yaml  config.json  package.json  pnpm-lock.yaml  pytest.ini
.cursor/: mcp.json
.cursor/rules/: duh.cursorrules  duh.mdc  shadcn.mdc  sveltekit2-svelte5.mdc
bolt/: index.html  package-lock.json  package.json
bolt/src/components/: BookingScreen.tsx  ComparisonScreen.tsx
bolt/src/config/: analytics.ts
bolt/src/services/: property-adapters.ts
services/api/: .coverage  .coveragerc  Dockerfile  a.json  airbnb.json  airbnb_sample_property.json  apify_data.json  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
services/api/.github/workflows/: test-coverage.yml
services/api/.hypothesis/tmp/: tmp09ytvzek  tmp0uopbkzi  tmp4mjvbtwl  tmp5bjktgwv  tmp73l93dq1  tmp9ct6lg0d  tmpce88fyny  tmpczndilmx  tmpe0nfo1kv  tmpf38z6hqx  tmphpxt3yq0  tmpi133xwf9  tmpl7fsni98  tmpmp2tnqwa  tmpntwo2mmn  tmppkv5650b  tmprmuxxat5  tmpvzqn1mxn  tmpw0u3amd_  tmpwvul5q2k  tmpyahrh4vt
services/api/cache/: cache.db  cache.db-shm  cache.db-wal
services/api/src/: __init__.py
services/api/src/interfaces/: db.py  llm.py
services/api/src/lib/cache/: property_cache.py
services/api/src/lib/evaluate/: __init__.py  agents.py  agents_with_vision.py  analyze.py
services/api/src/lib/evaluate/image_analysis/: __init__.py
services/api/src/lib/evaluate/properites/: __init__.py  simplify_property.py  unify_properties.py  utils.py
services/api/src/lib/scraper/: airbnb_apify.py  apify.py  booking.py  booking_apify.py
services/api/src/models/: airbnb_apify.py  apify.py  booking_apify.py  request.py  requirement.py  result.py  unified_property.py
services/api/src/results/: apify.json  hotels.json  search.json
services/api/src/routers/: __init__.py  property_evaluation.py  property_search.py  query_property.py  search-properties.py
services/api/src/utils/: logging.py
services/api/tests/: README.md  TEST_STATUS_REPORT.md  conftest.py  run_tests.py  simple_test.py
services/api/tests/lib/: test_evaluate_agent.py
services/api/tests/models/: test_request.py
services/api/tests/routers/: test_background_tasks.py  test_property_evaluation.py  test_property_evaluation_snapshots.py
src/lib/utils/: index.ts
src/routes/subscription/: +page.svelte
sveltekit/: .env.example  database.types.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
sveltekit/docs/: TOLT_INTEGRATION.md
sveltekit/migrations/: 20240601_stripe_tables.sql
sveltekit/src/: app.css  app.d.ts  app.html  hooks.server.ts
sveltekit/src/hooks/: server.ts
sveltekit/src/lib/: event.ts  utils.ts
sveltekit/src/lib/components/: ToltTracker.svelte
sveltekit/src/lib/db/: schema.sql
sveltekit/src/lib/server/: stripe.ts  subscription.ts
sveltekit/src/lib/services/: api.ts  (+2 more)
sveltekit/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
sveltekit/sveltekit/src/: hooks.server.ts
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_error_handling.py  test_property_endpoints.py
tests/unit/: __init__.py  test_analyze_requirement.py  test_app.py  test_cache.py  test_evaluate_agent.py  test_llm_interface.py  test_middleware.py  test_models.py  test_unified_property.py
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  unified-property.ts
web/.svelte-kit/: ambient.d.ts
web/.svelte-kit/types/: route_meta_data.json
web/docs/: rentluxe-functionality.md
web/src/: App.tsx  app.css  main.tsx
web/src/components/: BookingScreen.tsx  ComparisonScreen.tsx  GoogleAnalytics.tsx  Header.tsx  HistoryScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  SearchScreen.tsx  SubscriptionScreen.tsx  SwipeScreen.tsx
web/src/context/: AuthContext.tsx
web/src/routes/: +layout.svelte  +page.svelte
web/src/services/: api.ts  auth.ts  property-adapters.ts  stripe.ts  supabase.ts
web/src/types/: analytics.ts  global.d.ts  unified-property.ts
web/src/utils/: url.ts
(+171 files in other folders)
