[tool.poetry]
name = "src"
version = "0.0.1"
description = "API for nexthaven.ai"
authors = ["TBD"]
repository = "https://github.com/startino/rentino"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = { extras = ["standard"], version = "*" }
pydantic = "^2.0.0"
httpx = "*"
sse-starlette = "*"
uvicorn = "*"
python-dotenv = "*"
diskcache = "*"
watchfiles = "*"
supabase = "^2.11.0"
beautifulsoup4 = "^4.13.3"
apify-client = "^1.9.2"
logfire = {extras = ["fastapi"], version = "^3.12.0"}
opentelemetry-instrumentation-asgi = "^0.52b1"
opentelemetry-api = "^1.31.1"
opentelemetry-sdk = "^1.31.1"

# Keep langchain as optional dependencies to avoid breaking existing code
# They will be phased out as we migrate to pydantic-ai
[tool.poetry.group.legacy.dependencies]
langchain-experimental = "^0.3.4"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
autoflake = "*"
pytest-asyncio = "^0.25.3"
pytest-mock = "*"
pytest-freezegun = "*"
hypothesis = "*"
syrupy = "*"
pytest-xdist = "*"
coverage = "*"
respx = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "api: marks tests as API tests",
    "snapshot: marks tests as snapshot tests",
    "slow: marks tests as slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "except ImportError",
    "except Exception as e:"
]
